unpackaged/main/default/objects/hed__Program_Enrollment__c/hed__Program_Enrollment__c.object-meta.xml
<CustomObject>
    <description>A student Contact&#39;s enrollment in an academic program offered by a Department or School (the degree-granting Account type for the educational institution).</description>
    <label>Program Enrollment</label>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Program Enrollment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>