unpackaged/main/default/objects/hed__Program_Enrollment__c/fields/Extract_ProgramEnrollment__c.field-meta.xml
<CustomField>
    <fullName>Extract_ProgramEnrollment__c</fullName>
    <description>Field for MDC Data Upload Mapping.</description>
    <externalId>true</externalId>
    <label>Extract_ProgramEnrollment</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>