unpackaged/main/default/objects/hed__Program_Enrollment__c/fields/hed__Affiliation__c.field-meta.xml
<CustomField>
    <fullName>hed__Affiliation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is auto-populated with the Affiliation record that represents the student&#39;s enrollment in this Program.</description>
    <inlineHelpText>This field is auto-populated with the Affiliation record that represents the student&#39;s enrollment in this Program.</inlineHelpText>
    <label>Affiliation</label>
    <referenceTo>hed__Affiliation__c</referenceTo>
    <relationshipLabel>Program Enrollments</relationshipLabel>
    <relationshipName>Program_Enrollment</relationshipName>
    <type>Lookup</type>
</CustomField>