unpackaged/main/default/objects/hed__Program_Enrollment__c/fields/hed__GPA__c.field-meta.xml
<CustomField>
    <fullName>hed__GPA__c</fullName>
    <description>The student&#39;s current grade point average.</description>
    <inlineHelpText>The student&#39;s current grade point average.</inlineHelpText>
    <label>GPA</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>