unpackaged/main/default/objects/hed__Program_Enrollment__c/fields/traa_Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>traa_Graduation_Year__c</fullName>
    <description>This field is used to store graduation year of student.</description>
    <inlineHelpText>Graduation year of student.</inlineHelpText>
    <label>Graduation Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>