unpackaged/main/default/objects/hed__Program_Enrollment__c/fields/traa_On_Leave_Expected_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>traa_On_Leave_Expected_Return_Date__c</fullName>
    <description>This field is used to store the expected return date for a student that is On Leave.</description>
    <inlineHelpText>If a student is on leave, determine the expected return date.</inlineHelpText>
    <label>On Leave Return Date</label>
    <type>Date</type>
</CustomField>