unpackaged/main/default/objects/hed__Program_Enrollment__c/fields/traa_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>traa_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to original opportunity</description>
    <inlineHelpText>Lookup to original opportunity</inlineHelpText>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.traa_Is_Enrollment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Program Enrollments</relationshipLabel>
    <relationshipName>traa_Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>