unpackaged/main/default/objects/hed__Program_Enrollment__c/fields/traa_Returning_Student__c.field-meta.xml
<CustomField>
    <fullName>traa_Returning_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a returning student for the program enrollment?</description>
    <inlineHelpText>Is a returning student for the program enrollment?</inlineHelpText>
    <label>Returning Student</label>
    <type>Checkbox</type>
</CustomField>