unpackaged/main/default/objects/hed__Program_Enrollment__c/validationRules/traa_PE_1_Status_On_Leave_without_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>traa_PE_1_Status_On_Leave_without_Date</fullName>
    <active>true</active>
    <description>Validation rule ensures that an expected return date is filled in</description>
    <errorConditionFormula>ISPICKVAL( hed__Enrollment_Status__c , &#39;On Leave&#39;) 
&amp;&amp; ISNULL( traa_On_Leave_Expected_Return_Date__c )</errorConditionFormula>
    <errorMessage>Program Enrollment 1: You cannot change the Enrollment Status to &#39;On Leave&#39; if there is no &quot;On Leave Expected Return Date&quot; chosen.</errorMessage>
</ValidationRule>